name: haskell-table
version: 0.0.0.0
synopsis: Haskell table.
description:
homepage: https://github.com/gertcuykens/haskell-table.git
license: GPL-3
--license-file: LICENSE
author: Gert Cuykens
maintainer: gert.cuykens@gmail.com
category: Data
build-type: Simple
cabal-version: >=1.8
--data-files:
executable haskell-table
    hs-source-dirs: src
    main-is: Main.hs
    other-modules: Table
    ghc-options: -Wall
    build-depends: acid-state >= 0.8
                 , base >= 4.6
                 , bytestring >= 0.10
                 , containers >= 0.5
                 , lens >= 3.2
                 , safecopy >= 0.7
                 , text >= 0.11
                 , network >= 2.4

