name: haskell-table
version: 0.0.0.0
synopsis: Haskell acid table.
description:
--homepage: https://github.com/gertcuykens/haskell-table.git
license: GPL-3
--license-file: LICENSE
author: Gert Cuykens
maintainer: gert.cuykens@gmail.com
category: Data
build-type: Simple
cabal-version: >=1.8
Source-repository head
  type: git
  location: https://github.com/gertcuykens/haskell-table.git
--data-files:

library
    hs-source-dirs: src
    exposed-modules: Table
    ghc-options: -Wall -O2
    build-depends: acid-state >= 0.8
                 , base >= 4.6
                 , containers >= 0.5
                 , lens >= 3.2
                 , safecopy >= 0.7
                 , text >= 0.11

executable archive
    hs-source-dirs: src
    main-is: Archive.hs
    other-modules: Table
    ghc-options: -Wall -O2
    build-depends: acid-state >= 0.8
                 , base >= 4.6
                 , containers >= 0.5
                 , lens >= 3.2
                 , safecopy >= 0.7
                 , text >= 0.11

executable server
    hs-source-dirs: src
    main-is: Server.hs
    other-modules: Table
    ghc-options: -Wall -O2
    build-depends: acid-state >= 0.8
                 , base >= 4.6
                 , bytestring >= 0.10
                 , containers >= 0.5
                 , lens >= 3.2
                 , safecopy >= 0.7
                 , text >= 0.11
                 , network >= 2.4

